2007-05-14  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: add binding for gimp_user_directory().

2007-05-14  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.[ch] (file_utils_filename_is_uri): new function,
	fixed and factored out of file_utils_filename_to_uri().

	* app/main.c (gimp_dbus_open): use it here instead of a simple
	strstr(filename, "://").

2007-05-14  Tor Lillqvist  <tml@novell.com>

	* libgimpbase/gimpenv.c: Undef DATADIR before including <shlobj.h>
	to avoid collision with DATADIR enum in objidl.h. Define
	CSIDL_MYDOCUMENTS, CSIDL_MYMUSIC and CSIDL_MYVIDEO in case missing
	from shlobj.h.

	* libgimpbase/Makefile.am: Link with -lole32 on Win32 for
	CoTaskMemFree().

2007-05-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): add a
	shortcut to the user's Pictures folder.

	* libgimpbase/xdg-user-dir.c: cosmetic changes.

2007-05-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimp-help-lookup.c: include libgimpbase/gimpbase.h.

2007-05-13  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/xdg-user-dir.c[ch]: removed here ...

	* libgimpbase/Makefile.am
	* libgimpbase/xdg-user-dir.[ch]: ... and moved to libgimpbase.

	* libgimpbase/gimpbaseenums.[ch]: added GimpUserDirectory enum.

	* libgimpbase/gimpenv.[ch]: added new function to identify special
	user folders. Added Win32 specific code and use xdg_user_dir_lookup()
	on other platforms.

	* libgimp/gimpenums.c.tail
	* tools/pdbgen/enums.pl: regenerated.

	* libgimpbase/gimpbase.def: updated.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/file-procedure.[ch]
	* app/file/file-utils.[ch]: split functions dealing with file
	procedures into their own file and renamed them.

	* app/file/file-open.c
	* app/dialogs/file-save-dialog.c
	* app/actions/file-commands.c
	* app/widgets/gimpthumbbox.c
	* app/widgets/gimpdnd-xds.c
	* app/widgets/gimpimagepropview.c