@@ -1,3 +1,9 @@
+2007-05-14  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am: ignore gimpdbusservice-glue.h.
+
+	* app/app-sections.txt: some more updates.
+
 2007-05-13  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-sections.txt: added gimp_user_directory().
